--- a/style.css
+++ b/style.css
@@ -50,3 +50,38 @@ p{
     margin-top: 30px;
     margin-bottom: 80px;
 }
+.My-Recipies{
+    text-align: center;
+}
+.card{
+    border: 20px solid white;
+    border-radius: 15px;
+    margin: 10px;
+    padding: 20px;
+    box-shadow: 10px 10px 5px gray;
+}
+.card h2{
+    padding: 20px 0;
+}
+.card img{
+    width: 100%;
+}
+.card-one{
+    width: auto;
+    display: inline;
+}
+footer{
+    text-align: center;
+    width: 100%;
+    height: 200px;
+    background-color: black;
+}
+footer h1{
+    color: white;
+}
+footer p{
+    color: white;
+}
+.footer-area{
+    padding-top: 20px;
+}
